<resources>
    <string name="app_name">test1</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="unlimited">不限</string>
    <string name="whether_live">是否住家</string>
    <string name="whether_eat">是否含餐</string>
    <string name="photograph">拍个照呗</string>
    <string name="basic_document">基本资料</string>
    <string name="birthday">生日</string>
    <string name="now_live_city">现居所在地</string>
    <string name="professional_skills">专业技能</string>
    <string name="level1">普通护工</string>
    <string name="level2">高级护工</string>
    <string name="level3">护士</string>
    <string name="release">确认发布</string>
    <string name="cancel">取消</string>
    <string name="take_photo">相机拍摄</string>
    <string name="choose_photo">本地相册</string>
    <string name="work_time">工作时间</string>
    <string name="day_and_night">全天</string>
    <string name="day">白班</string>
    <string name="night">夜班</string>
    <string name="self_introduction">自我介绍</string>
    <string name="service_price">服务价格</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="new_password">新密码</string>
    <string name="enter_input_password">请再次输入密码</string>
    <string name="enter_new_password">确认新密码</string>
    <string name="submit">确定</string>
    <string name="sign_up">注册</string>
    <string name="level">级别</string>
    <string name="age">年龄</string>
    <string name="nearby">附近</string>
    <string name="lodging">食宿</string>
    <string name="location">所在地</string>
    <string name="patient_info">病人情况</string>
    <string name="name">姓名</string>
    <string name="service_date">服务日期</string>
    <string name="describe">描述你的专业技能</string>
    <string name="price_hour">元/小时</string>
    <string name="find_work">找雇主</string>
    <string name="find_person">找护工</string>
    <string name="my_work">我的招聘/求职信息</string>
    <string name="my_info">我的资料</string>
    <string name="setting">设置</string>
    <string name="feedback">反馈</string>
    <string name="about">关于我们</string>
    <string name="back">返回</string>
    <string name="my">我的</string>
    <string name="find_password">找回密码</string>
    <string name="region">地区</string>
    <string name="your_location">您所在地</string>
    <string name="choose">请选择</string>
    <string name="sever_date">服务日期</string>
    <string name="service_time">服务时间</string>
    <string name="at">至</string>
    <string name="whether_eat2">是否含餐</string>
    <string name="whether_live2">是否住家</string>
    <string name="patient_info2">病人情况</string>
    <string name="service_price2">服务价格</string>
    <string name="employer_name">雇主称呼</string>
    <string name="employer_remarks">雇主备注</string>
    <string name="employer_address">雇主地址</string>
    <string name="todo">TODO</string>
    <string name="save">保存</string>
    <string name="cut">裁剪</string>
    <string name="address">地址</string>
    <string name="detailed_information">详细信息</string>
    <string name="copyright">版权所有：原力科技</string>
    <string name="technical_support">技术支持：草船云</string>
    <string name="version_update">版本更新</string>
    <string name="opinion">请输入您的宝贵意见</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="call">称呼</string>
    <string name="education">学历</string>
    <string name="clip">剪裁</string>
    <string name="home">首页</string>
    <string name="set_name">设置名称</string>
    <string name="input_name">请输入称呼</string>
    <string name="share">分享</string>
    <string name="wechat">微信</string>
    <string name="moments">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="sf_city">%1$s"-"%2$s</string>
    <string name="sf_price_hour">%1$d元/小时</string>
    <string name="sf_age">%1$d岁</string>
    <string name="leaving_message">留言</string>
    <string name="telephone_contact">电话联系</string>
    <string name="personal_homepage">个人主页</string>
    <string name="sf_date">%1$s至%2$s</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="eat">含餐</string>
    <string name="not_eat">不含餐</string>
    <string name="unlimited_eat">不限含餐</string>
    <string name="unlimited_live">不限住家</string>
    <string name="live">住家</string>
    <string name="not_live">不住家</string>
    <string name="can_self_care">能自理</string>
    <string name="cannot_self_care">不能自理</string>
    <string name="semi_disability">半失能</string>
    <string name="postop">手术后</string>
    <string name="nearby1">0-500米</string>
    <string name="nearby2">0-1000米</string>
    <string name="nearby3">0-1500米</string>
    <string name="nearby4">0-2000米</string>
    <string name="age1">18-40岁 青年人</string>
    <string name="age2">41-59岁 中年人</string>
    <string name="age3">60岁及以上 老年人</string>
    <string name="job_wanted">我的求职</string>
    <string name="recruit">我的招聘</string>
</resources>
