<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray2"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_phone"
        android:drawableStart="@drawable/icon_phone"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:maxLength="11"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_locked"
        android:drawableStart="@drawable/icon_locked"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_shape"
            android:drawableStart="@drawable/icon_shape"
            android:hint="@string/input_code"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <Button
            android:id="@+id/btn_code"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@id/et_code"
            android:layout_alignRight="@id/et_code"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="20dp"
            android:background="@color/blue"
            android:onClick="code"
            android:text="@string/get_code"
            android:textColor="@color/white" />

    </RelativeLayout>


    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@color/blue"
        android:text="@string/sign_up"
        android:textColor="@color/white" />


</LinearLayout>