<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff0f4"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />


    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/icon_phone"
        android:drawableStart="@drawable/icon_phone"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:maxLength="11"
        android:textColor="#000000"
        android:textColorHint="#9C9C9C" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/icon_locked"
        android:drawableStart="@drawable/icon_locked"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#9C9C9C" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="6dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forget_password"
            android:textColor="@color/blue" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@color/blue"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="18sp" />


</LinearLayout>