<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_outside"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btn_pop_album"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:text="@string/choose_photo"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_gray"/>

        <Button
            android:id="@+id/btn_pop_camera"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:text="@string/take_photo"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_pop_cancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/black" />
    </LinearLayout>


</RelativeLayout>
