<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray2"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:paddingLeft="120dp"
            android:paddingStart="120dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/new_password"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            android:layout_toEndOf="@+id/tv_textView1"
            android:layout_toRightOf="@+id/tv_textView1"
            android:background="@color/gray" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/et_password02"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:hint="@string/enter_input_password"
            android:inputType="textPassword"
            android:paddingLeft="120dp"
            android:paddingStart="120dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/enter_new_password"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:background="@color/gray" />

    </RelativeLayout>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@color/blue"
        android:text="@string/submit"
        android:textColor="@color/white" />


</LinearLayout>