<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <com.example.smart.test1.view.PickerView
            android:id="@+id/btn_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableEnd="@drawable/icon_arrow"
            android:drawableRight="@drawable/icon_arrow"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="@string/level"
            android:textColor="@color/gray"
            tools:ignore="ButtonStyle,RtlSymmetry" />

        <com.example.smart.test1.view.PickerView
            android:id="@+id/btn_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableEnd="@drawable/icon_arrow"
            android:drawableRight="@drawable/icon_arrow"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="@string/age"
            android:textColor="@color/gray"
            tools:ignore="ButtonStyle,RtlSymmetry" />

        <com.example.smart.test1.view.PickerView
            android:id="@+id/btn_nearby"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableEnd="@drawable/icon_arrow"
            android:drawableRight="@drawable/icon_arrow"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="@string/nearby"
            android:textColor="@color/gray"
            tools:ignore="ButtonStyle,RtlSymmetry" />

        <com.example.smart.test1.view.PickerView
            android:id="@+id/btn_lodging"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableEnd="@drawable/icon_arrow"
            android:drawableRight="@drawable/icon_arrow"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="@string/lodging"
            android:textColor="@color/gray"
            tools:ignore="ButtonStyle,RtlSymmetry" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/light_gray" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>